Исправления первой лабы

--- a/first/first.html
+++ b/first/first.html
@@ -6,7 +6,7 @@
 <link href="mystl.css" rel=”stylesheet”> </head>
 <body>
 <div style = "width: 35%; text-align:justify;">
-<h1 style = "color:DodgerBlue"><a name="tp">Square Dance</a></h1>
+<h1 style = "color:DodgerBlue; font-family:sans-serif"><a name="tp">Square Dance</a></h1>
 <p style = "color:green; text-indent: 3em; font-style: italic"> Сквэр-данс (square dance, в переводе «квадратный танец») &mdash; народный танец, который появился в США.
    Танцевальные фигуры, принятые в сквэр-дансе, заимствованы из традиционных народных танцев, привезенных в Соединенные Штаты эмигрантами из Европы.
     Среди этих танцев &mdash; моррис, английский танец «кантри» и кадриль. Сквэр-данс танцуют во всем мире. </p>
