--- a/first/second.html
+++ b/first/second.html
@@ -31,7 +31,7 @@
 </ul>
 
 
-<p><a href="mailto:адрес?subject=тема" style = "color:red">Отправить письмо</a></p>
+<p><a href="first.html" style="color: blue">Назад</a> | <a href="mailto:адрес?subject=тема" style = "color:red">Отправить письмо</a></p>
 </div>
 </body>
 </html>
