--- a/second/first.html
+++ b/second/first.html
@@ -7,18 +7,18 @@
 <body>
 <div>
 <h1><a name="tp">Square Dance</a></h1>
-<p style = "font-style: italic"> Сквэр-данс (square dance, в переводе «квадратный танец») &mdash; народный танец, который появился в США.
+<p> Сквэр-данс (square dance, в переводе «квадратный танец») &mdash; народный танец, который появился в США.
    Танцевальные фигуры, принятые в сквэр-дансе, заимствованы из традиционных народных танцев, привезенных в Соединенные Штаты эмигрантами из Европы.
     Среди этих танцев &mdash; моррис, английский танец «кантри» и кадриль. Сквэр-данс танцуют во всем мире. </p>
 
-<h2>Что такое <a href="second.html" style="color: blue; text-decoration: none">Square Dance</a></h2>
-<p>Название танца &mdash; <em style = "color:Orange">сквэр-данс</em> &mdash; объясняется тем, что исходное расположение танцоров &mdash; это всегда квадрат.
+<h2>Что такое <a href="second.html">Square Dance</a></h2>
+<p>Название танца &mdash; <em >сквэр-данс</em> &mdash; объясняется тем, что исходное расположение танцоров &mdash; это всегда квадрат.
     Каждый квадрат образован четырьмя парами, стоящими лицом друг к другу.
     Особенность танца состоит в том, что последовательность фигур заранее не известна.
-    Их произносит или поет под музыку <em style = "color:Orange">коллер<sup>1</sup></em>, который руководит танцем, но сам в нем не участвует.</p>
+    Их произносит или поет под музыку <em>коллер<sup>1</sup></em>, который руководит танцем, но сам в нем не участвует.</p>
 
 
-<p><span style = "color:Blue">Список фигур</span> стандартизован и одинаков во всех клубах сквэр- данса.
+<p><span>Список фигур</span> стандартизован и одинаков во всех клубах сквэр- данса.
    Для обозначения фигур приняты английские названия.
    Это позволяет танцорам со всего света участвовать в международных фестивалях, не испытывая «трудностей перевода».</p>
 <h2> Square Dance в России</h2>
@@ -27,8 +27,29 @@
   Сейчас любители этого увлекательного танца живут в Санкт-Петербурге, Пскове, Мурманске, Калининграде и Москве.
   На 2017 год в России действуют 8 Square Dance клубов.
   Танцоры из Российских клубов принимают участие в международных фестивалях и принимают у себя гостей из других стран.</p>
-<p id = "asd" style = "font-size: 8pt; font-weight: bold">1 &mdash; от английского call &mdash; «выкликать, называть» </p>
-<p style = "text-align:center; font-weight: bold"><a href="#tp" style="color: black; text-decoration: none">наверх</a></p>
+<p id = "asd">1 &mdash; от английского call &mdash; «выкликать, называть» </p>
+<p class="ssl"><a href="#tp">наверх</a></p>
+
+<p id = "levels">Уровни Square Dance</p>
+
+<ul>
+<li>Мейнстрим (Mainstream)</li>
+<li>Плюс (Plus)</li>
+<li>Advanced
+<ul>
+    <li>A-1</li>
+    <li>A-2</li>
+</ul>
+</li>
+<li>Challenge
+<ul>
+<li>C1</li>
+<li>C2</li>
+<li>C3A</li>
+</ul>
+</li>
+</ul>
+
 </div>
 </body>
 </html>
