--- a/second/second.html
+++ b/second/second.html
@@ -3,7 +3,7 @@
 <head>
 <title>Заголовок страницы</title>
 <meta charset="utf-8">
-<link href="mystl.css" rel=”stylesheet”> </head>
+<link href="index.css" rel="stylesheet"> </head>
 <body>
 <div style = "width: 35%; margin:auto; text-align:justify;">
 <h2 style = "color:blue; margin: 0">Фигуры Square Dance</h2>
