--- a/second/first.html
+++ b/second/first.html
@@ -49,7 +49,15 @@
 </ul>
 </li>
 </ul>
-
+<input></input>
+</div>
+<div>
+  <input type="checkbox" id="checkbox">
+  <label for="checkbox">Эта метка будет зелёной.</label>
+</div>
+<div>
+  <input type="radio" id="radio">
+  <label for="radio">Эта метка будет зелёной.</label>
 </div>
 </body>
 </html>
