--- a/third/first.html
+++ b/third/first.html
@@ -31,7 +31,7 @@
           компаний, занимающих «лидирующие позиции на планете»). Ну а японские автомобили, в свою очередь,
            стали «символом»: надежности, престижа, комфорта и уверенности на дороге – завоевав всеобщее
             признание на мировой арене.</p>
-      <section>
+      <section id = "Drift">
         <h2>Дрифт</h2>
         <p>Дрифт (англ. Drift) — техника прохождения поворотов и вид автоспорта,
            характеризующийся использованием управляемого заноса на максимально
