Почти готовая 4-ая

--- a/4f/task2.html
+++ b/4f/task2.html
@@ -9,7 +9,6 @@
     <h1 style="text-align: center; line-height: 4em;">Toyota</h1>
   </header>
 
-<div>
   <aside style="float:left; width:50%;">
     <nav class="hb">
       <ul>
@@ -17,6 +16,7 @@
         <li><a href="task3.html">Nissan</a></li>
         <li><a href="https://www.mazda.ru" target="_blank">Mazda</a></li>
       </ul>
+      <br clear = "all"/>
     </nav>
 
     <section id="bord">
@@ -36,7 +36,7 @@
     <header>
       <h2>Toyota Supra A90</h2>
     </header>
-    <aside style="float:left; width:30%;">
+    <aside style="float:left; width:auto;">
       <figure class="sign">
         <img src="supra.jpg" style="margin-right: 20px;" height = "100em" width = "150em"/>
         <figcaption><a href="task1.html" style="color: black;">Лучшие машины для дрифта</a></figcaption>
@@ -63,7 +63,6 @@
       </address>
     </footer>
   </article>
-</div>
 
 </body>
 </html>
