--- a/4f/task3.html
+++ b/4f/task3.html
@@ -3,12 +3,13 @@
 <head>
 <title>Заголовок страницы</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="index.css"> </head>
+<link rel="stylesheet" href="task3.css"> </head>
 <body>
   <section>
     <figure class="head">
         <header height="100">
-          <h1 style="text-align: center; line-height: 4em;">Японские машины</h1>
+          <img src="nissan.jpg" style="float:left; margin-right: 20px;" height = "100em" width = "150em"/>
+          <h1 style="margin-left: 100px; height:100px; line-height: 4em;">Nissan</h1>
         </header>
         <article><a href="task1.html" style="color: black;">Лучшие машины для дрифта</a></article>
     </figure>
@@ -21,33 +22,49 @@
         </ul>
       </nav>
     </figure>
-  </section>
   <section>
-    <main>
-      <h2>Японские машины</h2>
-      <p>Автопром Японии уже давно известен во всём мире как одна из самых успешных отраслей японской
-         промышленности (страна «Восходящего Солнца» – это родина ряда крупных автомобилестроительных
-          компаний, занимающих «лидирующие позиции на планете»). Ну а японские автомобили, в свою очередь,
-           стали «символом»: надежности, престижа, комфорта и уверенности на дороге – завоевав всеобщее
-            признание на мировой арене.</p>
-      <section id = "Drift">
-        <h2>Дрифт</h2>
-        <p>Дрифт (англ. Drift) — техника прохождения поворотов и вид автоспорта,
-           характеризующийся использованием управляемого заноса на максимально
-            возможных для удержания на трассе скорости и угла к траектории.
-            Соревнования проводятся на асфальте, льду, трассах с большим количеством поворотов.
-            Также вид автоспорта, основанный на зрелищности прохождения поворотов в заносе.
-             Используются автомобили только с задним приводом.
-              В основном популярными автомобилями японского автопрома для дрифта являются:
-               Toyota Corolla (AE86), Nissan Silvia, Nissan Skyline, Nissan Fairlady Z (Z33-34),
-                Toyota Chaser, Toyota Mark II и остальные</p>
+    <aside style="float:left; width:50%;">
+
+      <section id="bord">
+        <h2>Toyota</h2>
+        <p>Toyota Motor Corporation — крупнейшая японская автомобилестроительная корпорация,
+        также предоставляющая финансовые услуги и имеющая несколько дополнительных направлений в бизнесе.
+        Является крупнейшей автомобилестроительной публичной компанией в мире, а также крупнейшей публичной
+         компанией в Японии.</p>
       </section>
-    </main>
-  </section>
+
+      <div id="bord">
+        <p>В силу своей распространённости и обилию существующего тюнинга, автомобили Toyota популярны по всему миру в качестве основы для гоночных машин самых разных категорий.
+         Не исключение и дрифт, в котором есть как минимум 7 необычных Toyota для управляемого заноса.</p>
+      </div>
+    </aside>
+
+    <article style="float:left; width:50%">
+      <header>
+        <h2>Toyota Supra A90</h2>
+      </header>
+      <article>
+        <p>Первое заявление о пятом поколении появилось в 2014 году с концептом нового автомобиля Toyota FT-1,
+           сильно напоминавшим дизайном Toyota Supra А80. Первые реальные прототипы были замечены в 2017 году.
+           Автомобиль разрабатывался совместно с BMW, что очень сильно возмутило фанатов Toyota Supra. Интерьер
+           с Z4 у новой Supra один, как и сама машина и отличаются технически только кузовом, что очень сильно не
+            понравилось фанатам бренда Toyota. Колесная база новой Supra составляет 2 468 мм. Это автоматически приводит
+            ее в тот же класс, что и Porsche 911 (2 453 мм) и Jaguar F-Type (2 621 мм). Но ее длина в 4 382 мм делает его
+             немного более компактным в целом, что означает более короткие передний и задний свесы, чрезвычайно низкий центр
+             тяжести и идеальное распределение веса 50:50., BMW собирались выпустить новую BMW Z4, а Toyota интересовала Suprа.
+             Новая Toyota Supra оснащается двигателем BMW B58 340 л. с. и 500 Нм (по сравнению с BMW Z4, где имеется 345 л. с. и 505 Нм)
+              и поставляется с восьмиступенчатой автоматической коробкой передач. По оценками Toyota, новая Supra разгоняется до сотни
+               всего за 4,3 секунды, но максимальная скорость ограничена на 250 км/ч. По сравнению с новой Z4 супра имеет более легкий
+               вес и лучшую динамику. Также Toyota был потерян патент на название Supra и новая машина продается в Европе и США, как GR
+                Supra, в России и в Японии осталось просто обычное название Supra.</p>
+      <article>
+    </article>
+
 <footer>
   <address>
     <a href="mailto:адрес?subject=тема">Отправить письмо.</a>
   </address>
 </footer>
+
 </body>
 </html>
