--- a/third/first.html
+++ b/third/first.html
@@ -3,7 +3,8 @@
 <head>
 <title>Заголовок страницы</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="index.css"> </head>
+<link rel="stylesheet" href="index.css">
+</head>
 <body>
   <section>
     <figure class="head">
