--- a/4f/task2.html
+++ b/4f/task2.html
@@ -31,8 +31,10 @@
       <p>В силу своей распространённости и обилию существующего тюнинга, автомобили Toyota популярны по всему миру в качестве основы для гоночных машин самых разных категорий.
        Не исключение и дрифт, в котором есть как минимум 7 необычных Toyota для управляемого заноса.</p>
     </div>
+
   </aside>
-  <article style="float:left; width:48%;">
+
+  <article style="float:left; width:50%;">
     <header>
       <h2>Toyota Supra A90</h2>
     </header>
@@ -42,7 +44,7 @@
         <figcaption><a href="task1.html" style="color: black;">Лучшие машины для дрифта</a></figcaption>
       </figure>
     </aside>
-    <article>
+    <article style="margin-right: 1em;">
       <p>Первое заявление о пятом поколении появилось в 2014 году с концептом нового автомобиля Toyota FT-1,
          сильно напоминавшим дизайном Toyota Supra А80. Первые реальные прототипы были замечены в 2017 году.
          Автомобиль разрабатывался совместно с BMW, что очень сильно возмутило фанатов Toyota Supra. Интерьер
@@ -56,7 +58,7 @@
              всего за 4,3 секунды, но максимальная скорость ограничена на 250 км/ч. По сравнению с новой Z4 супра имеет более легкий
              вес и лучшую динамику. Также Toyota был потерян патент на название Supra и новая машина продается в Европе и США, как GR
               Supra, в России и в Японии осталось просто обычное название Supra.</p>
-    <article>
+    </article>
     <footer>
       <address>
         <a href="mailto:адрес?subject=тема">Отправить письмо.</a>
