--- a/4f/task3.html
+++ b/4f/task3.html
@@ -24,42 +24,35 @@
     </figure>
   <section>
     <aside style="float:left; width:50%;">
-
+  <main>
       <section id="bord">
-        <h2>Toyota</h2>
-        <p>Toyota Motor Corporation — крупнейшая японская автомобилестроительная корпорация,
-        также предоставляющая финансовые услуги и имеющая несколько дополнительных направлений в бизнесе.
-        Является крупнейшей автомобилестроительной публичной компанией в мире, а также крупнейшей публичной
-         компанией в Японии.</p>
+        <h2>Nissan</h2>
+        <p>Nissan Motor Co., Ltd. — японский автопроизводитель, один из крупнейших в мире. Компания основана в 1933 году. По состоянию на 2010 год занимает 8-е место в
+          мировом рейтинге автопроизводителей по версии международного института исследования рынка IHS Automotive.
+           Штаб-квартира находится в городе Иокогама.</p>
       </section>
 
       <div id="bord">
-        <p>В силу своей распространённости и обилию существующего тюнинга, автомобили Toyota популярны по всему миру в качестве основы для гоночных машин самых разных категорий.
-         Не исключение и дрифт, в котором есть как минимум 7 необычных Toyota для управляемого заноса.</p>
+        <p>Некоторые модели компании Nissan стали практически синонимом слова дрифт. Это лучший выбор для новичков, это отличный выбор для профессионалов и чемпионов.
+          Silvia, Skyline, 350z — признаные шедевры.</p>
       </div>
     </aside>
 
-    <article style="float:left; width:50%">
+    <article style="float:left; width:49%; margin-right: 1%;">
       <header>
-        <h2>Toyota Supra A90</h2>
+        <h2>Nissan Silvia</h2>
       </header>
       <article>
-        <p>Первое заявление о пятом поколении появилось в 2014 году с концептом нового автомобиля Toyota FT-1,
-           сильно напоминавшим дизайном Toyota Supra А80. Первые реальные прототипы были замечены в 2017 году.
-           Автомобиль разрабатывался совместно с BMW, что очень сильно возмутило фанатов Toyota Supra. Интерьер
-           с Z4 у новой Supra один, как и сама машина и отличаются технически только кузовом, что очень сильно не
-            понравилось фанатам бренда Toyota. Колесная база новой Supra составляет 2 468 мм. Это автоматически приводит
-            ее в тот же класс, что и Porsche 911 (2 453 мм) и Jaguar F-Type (2 621 мм). Но ее длина в 4 382 мм делает его
-             немного более компактным в целом, что означает более короткие передний и задний свесы, чрезвычайно низкий центр
-             тяжести и идеальное распределение веса 50:50., BMW собирались выпустить новую BMW Z4, а Toyota интересовала Suprа.
-             Новая Toyota Supra оснащается двигателем BMW B58 340 л. с. и 500 Нм (по сравнению с BMW Z4, где имеется 345 л. с. и 505 Нм)
-              и поставляется с восьмиступенчатой автоматической коробкой передач. По оценками Toyota, новая Supra разгоняется до сотни
-               всего за 4,3 секунды, но максимальная скорость ограничена на 250 км/ч. По сравнению с новой Z4 супра имеет более легкий
-               вес и лучшую динамику. Также Toyota был потерян патент на название Supra и новая машина продается в Европе и США, как GR
-                Supra, в России и в Японии осталось просто обычное название Supra.</p>
-      <article>
+        <p>Nissan Silvia — спортивное купе, выпускавшееся японским автопроизводителем Nissan с 1965 по 2002 годы.
+          Купе строилось на платформе Nissan S. Хотя и последние модели разделяли это шасси с другими автомобилями
+          Nissan (в первую очередь европейская 200SX и североамериканская 240SX в поколениях S13 и S14, и
+           модель 180SX на японском рынке), название Silvia на эти автомобили совместно с кодами шасси не переходило.</p>
+      </article>
     </article>
-
+  </main>
+<div>
+  <br clear = "all"/>
+</div>
 <footer>
   <address>
     <a href="mailto:адрес?subject=тема">Отправить письмо.</a>
