--- a/6s/5f.html
+++ b/6s/5f.html
@@ -125,7 +125,7 @@
 			</div>
 		</div>
 
-		<article><a href="/6s/index.html" style="color: black;">Пройти тестирование</a></article>
+		<article><a href="index.html" style="color: black;">Пройти тестирование</a></article>
 		<form onsubmit="onSub()">
 			<fieldset>
 				<legend>Личные данные</legend>
