--- a/second/first.html
+++ b/second/first.html
@@ -1,63 +1,76 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-<title>Заголовок страницы</title>
-<meta charset="utf-8">
-<link rel="stylesheet" href="index.css"> </head>
-<body>
-<div>
-<h1><a name="tp">Square Dance</a></h1>
-<p> Сквэр-данс (square dance, в переводе «квадратный танец») &mdash; народный танец, который появился в США.
-   Танцевальные фигуры, принятые в сквэр-дансе, заимствованы из традиционных народных танцев, привезенных в Соединенные Штаты эмигрантами из Европы.
-    Среди этих танцев &mdash; моррис, английский танец «кантри» и кадриль. Сквэр-данс танцуют во всем мире. </p>
 
-<h2>Что такое <a href="second.html">Square Dance</a></h2>
-<p>Название танца &mdash; <em >сквэр-данс</em> &mdash; объясняется тем, что исходное расположение танцоров &mdash; это всегда квадрат.
-    Каждый квадрат образован четырьмя парами, стоящими лицом друг к другу.
-    Особенность танца состоит в том, что последовательность фигур заранее не известна.
-    Их произносит или поет под музыку <em>коллер<sup>1</sup></em>, который руководит танцем, но сам в нем не участвует.</p>
+  <head>
+    <title>Заголовок страницы</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="index.css">
+  </head>
 
+  <body>
+    <div>
+      <h1>
+        <a name="tp">Square Dance</a>
+      </h1>
+      <p>
+        Сквэр-данс (square dance, в переводе «квадратный танец») &mdash; народный танец, который появился в США. Танцевальные фигуры, принятые в сквэр-дансе, заимствованы из традиционных народных танцев, привезенных в Соединенные Штаты эмигрантами из
+        Европы. Среди этих танцев &mdash; моррис, английский танец «кантри» и кадриль. Сквэр-данс танцуют во всем мире.
+      </p>
 
-<p><span>Список фигур</span> стандартизован и одинаков во всех клубах сквэр- данса.
-   Для обозначения фигур приняты английские названия.
-   Это позволяет танцорам со всего света участвовать в международных фестивалях, не испытывая «трудностей перевода».</p>
-<h2> Square Dance в России</h2>
+      <h2>Что такое
+        <a href="second.html">Square Dance</a>
+      </h2>
+      <p>Название танца &mdash;
+        <em>сквэр-данс</em>
+        &mdash; объясняется тем, что исходное расположение танцоров &mdash; это всегда квадрат. Каждый квадрат образован четырьмя парами, стоящими лицом друг к другу. Особенность танца состоит в том, что последовательность фигур заранее не известна. Их
+        произносит или поет под музыку
+        <em>коллер<sup>1</sup>
+        </em>, который руководит танцем, но сам в нем не участвует.</p>
 
-<p>В России этот танец впервые появился в 2003 году. Группа энтузиастов из Германии провела мастер классы на базе русско- немецкого центра в Петрозаводске. В результате в нашем городе в 2004 году был создан первый в России клуб.
-  Сейчас любители этого увлекательного танца живут в Санкт-Петербурге, Пскове, Мурманске, Калининграде и Москве.
-  На 2017 год в России действуют 8 Square Dance клубов.
-  Танцоры из Российских клубов принимают участие в международных фестивалях и принимают у себя гостей из других стран.</p>
-<p id = "asd">1 &mdash; от английского call &mdash; «выкликать, называть» </p>
-<p class="ssl"><a href="#tp">наверх</a></p>
+      <p>
+        <span>Список фигур</span>
+        стандартизован и одинаков во всех клубах сквэр- данса. Для обозначения фигур приняты английские названия. Это позволяет танцорам со всего света участвовать в международных фестивалях, не испытывая «трудностей перевода».</p>
+      <h2>
+        Square Dance в России</h2>
 
-<p id = "levels">Уровни Square Dance</p>
+      <p>В России этот танец впервые появился в 2003 году. Группа энтузиастов из Германии провела мастер классы на базе русско- немецкого центра в Петрозаводске. В результате в нашем городе в 2004 году был создан первый в России клуб. Сейчас любители
+        этого увлекательного танца живут в Санкт-Петербурге, Пскове, Мурманске, Калининграде и Москве. На 2017 год в России действуют 8 Square Dance клубов. Танцоры из Российских клубов принимают участие в международных фестивалях и принимают у себя
+        гостей из других стран.</p>
+      <p id="asd">1 &mdash; от английского call &mdash; «выкликать, называть»
+      </p>
+      <p class="ssl">
+        <a href="#tp">наверх</a>
+      </p>
 
-<ul>
-<li>Мейнстрим (Mainstream)</li>
-<li>Плюс (Plus)</li>
-<li>Advanced
-<ul>
-    <li>A-1</li>
-    <li>A-2</li>
-</ul>
-</li>
-<li>Challenge
-<ul>
-<li>C1</li>
-<li>C2</li>
-<li>C3A</li>
-</ul>
-</li>
-</ul>
-<input></input>
-</div>
-<div>
-  <input type="checkbox" id="checkbox">
-  <label for="checkbox">Эта метка будет зелёной.</label>
-</div>
-<div>
-  <input type="radio" id="radio">
-  <label for="radio">Эта метка будет зелёной.</label>
-</div>
-</body>
+      <p id="levels">Уровни Square Dance</p>
+
+      <ul>
+        <li>Мейнстрим (Mainstream)</li>
+        <li>Плюс (Plus)</li>
+        <li>Advanced
+          <ul>
+            <li>A-1</li>
+            <li>A-2</li>
+          </ul>
+        </li>
+        <li>Challenge
+          <ul>
+            <li>C1</li>
+            <li>C2</li>
+            <li>C3A</li>
+          </ul>
+        </li>
+      </ul>
+      <input></input>
+    </div>
+    <div>
+      <input type="checkbox" id="checkbox">
+      <label for="checkbox">Эта метка будет зелёной.</label>
+    </div>
+    <div>
+      <input type="radio" id="radio">
+      <label for="radio">Эта метка будет зелёной.</label>
+    </div>
+  </body>
+
 </html>
