--- a/first.html
+++ b/first.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body style="background:red">
   <section>
     <figure class="head">
         <header height="100">
@@ -34,7 +34,7 @@
             признание на мировой арене.</p>
       <section id = "Drift">
         <h2>Дрифт</h2>
-        
+
       </section>
     </main>
   </section>
