--- a/first.html
+++ b/first.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="index.css">
 </head>
-<body style="background:red">
+<body style="background:green;">
   <section>
     <figure class="head">
         <header height="100">
