--- a/first.html
+++ b/first.html
@@ -5,10 +5,10 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="index.css">
 </head>
-<body style="background:green;">
+<body style="background:black;">
   <section>
     <figure class="head">
-        <header height="100">
+        <header height="120">
           <img src="car.jpg" style="float:left; margin-right: 20px;" height="100" width="150"/>
           <h1 style="margin-left: 100px; height:100px; line-height: 4em;">Японские машины</h1>
         </header>
