--- a/first.html
+++ b/first.html
@@ -12,7 +12,7 @@
           <img src="car.jpg" style="float:left; margin-right: 20px;" height="100" width="150"/>
           <h1 style="margin-left: 100px; height:100px; line-height: 4em;">Японские машины</h1>
         </header>
-        <article>Лучшие машины для дрифта</article>
+        <article>Лучшие car для дрифта</article>
     </figure>
     <figure class="hb">
       <nav>
