--- a/first.html
+++ b/first.html
@@ -26,7 +26,7 @@
   </section>
   <section>
     <main>
-      <h2>Японские машины</h2>
+      <h2>Японские car</h2>
       <p>Автопром Японии уже давно известен во всём мире как одна из самых успешных отраслей японской
          промышленности (страна «Восходящего Солнца» – это родина ряда крупных автомобилестроительных
           компаний, занимающих «лидирующие позиции на планете»). Ну а японские автомобили, в свою очередь,
